// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectForm matches snapshot 1`] = `
<div
  className="usa-form "
>
  <label
    className=""
    htmlFor={1}
  >
    Some label
  </label>
  <select
    className="select-offset select-black"
    disabled={false}
    id={1}
    name={1}
    onChange={[Function]}
    value=""
  >
    <option
      disabled={true}
      key=""
      value=""
    >
      Sort option
    </option>
    <option
      key="-position__post__has_service_needs_differential"
      value="-position__post__has_service_needs_differential"
    >
      Featured Positions
    </option>
    <option
      key="-posted_date"
      value="-posted_date"
    >
      Posted Date: Most Recent
    </option>
    <option
      key="posted_date"
      value="posted_date"
    >
      Posted Date: Oldest
    </option>
    <option
      key="position__bureau"
      value="position__bureau"
    >
      Bureau: A-Z
    </option>
    <option
      key="-position__bureau"
      value="-position__bureau"
    >
      Bureau: Z-A
    </option>
    <option
      key="-position__grade"
      value="-position__grade"
    >
      Grade: Low to High
    </option>
    <option
      key="position__grade"
      value="position__grade"
    >
      Grade: High to Low
    </option>
    <option
      key="location_city"
      value="location_city"
    >
      Location: A-Z
    </option>
    <option
      key="-location_city"
      value="-location_city"
    >
      Location: Z-A
    </option>
    <option
      key="position__position_number"
      value="position__position_number"
    >
      Position Number: Low to High
    </option>
    <option
      key="-position__position_number"
      value="-position__position_number"
    >
      Position Number: High to Low
    </option>
    <option
      key="position__title"
      value="position__title"
    >
      Position Title: A-Z
    </option>
    <option
      key="-position__title"
      value="-position__title"
    >
      Position Title: Z-A
    </option>
    <option
      key="ted"
      value="ted"
    >
      TED: Most Recent
    </option>
    <option
      key="-ted"
      value="-ted"
    >
      TED: Oldest
    </option>
  </select>
</div>
`;

exports[`SelectForm matches snapshot when disabled 1`] = `
<div
  className="usa-form results-loading"
>
  <label
    className=""
    htmlFor={1}
  >
    Some label
  </label>
  <select
    className="select-offset select-black"
    disabled={true}
    id={1}
    name={1}
    onChange={[Function]}
    value=""
  >
    <option
      disabled={true}
      key=""
      value=""
    >
      Sort option
    </option>
    <option
      key="-position__post__has_service_needs_differential"
      value="-position__post__has_service_needs_differential"
    >
      Featured Positions
    </option>
    <option
      key="-posted_date"
      value="-posted_date"
    >
      Posted Date: Most Recent
    </option>
    <option
      key="posted_date"
      value="posted_date"
    >
      Posted Date: Oldest
    </option>
    <option
      key="position__bureau"
      value="position__bureau"
    >
      Bureau: A-Z
    </option>
    <option
      key="-position__bureau"
      value="-position__bureau"
    >
      Bureau: Z-A
    </option>
    <option
      key="-position__grade"
      value="-position__grade"
    >
      Grade: Low to High
    </option>
    <option
      key="position__grade"
      value="position__grade"
    >
      Grade: High to Low
    </option>
    <option
      key="location_city"
      value="location_city"
    >
      Location: A-Z
    </option>
    <option
      key="-location_city"
      value="-location_city"
    >
      Location: Z-A
    </option>
    <option
      key="position__position_number"
      value="position__position_number"
    >
      Position Number: Low to High
    </option>
    <option
      key="-position__position_number"
      value="-position__position_number"
    >
      Position Number: High to Low
    </option>
    <option
      key="position__title"
      value="position__title"
    >
      Position Title: A-Z
    </option>
    <option
      key="-position__title"
      value="-position__title"
    >
      Position Title: Z-A
    </option>
    <option
      key="ted"
      value="ted"
    >
      TED: Most Recent
    </option>
    <option
      key="-ted"
      value="-ted"
    >
      TED: Oldest
    </option>
  </select>
</div>
`;
